/*
 * $Id$
 */

2009-11-14 20:08 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  makefile.bcc
  *  makefile.gcc
  *  makefile.vc
  *  makefile.wat
     ! Fixed install tag on win32 makefiles.
     ; TODO: fix the error on the common.bkl on the bakefile lib

2009-11-13 15:09 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  config/mkdirstempl.bkl
  *  demos/helloworld/helloworld.prg
  *  include/wxHarbour/defs.ch
  *  include/wxHarbour/dialog.ch
  *  include/wxHarbour/event.ch
  *  include/wxHarbour/property.ch
  *  include/wxHarbour/raddox.ch
  *  include/wxHarbour/rdodefs.h
  *  include/wxHarbour/toplevel.ch
  *  include/wxHarbour/wx.ch
  *  include/wxHarbour/wx_hbcompat.ch
  *  include/wxHarbour/wxbase/wx_App.h
  *  include/wxHarbour/wxbase/wx_AuiNotebook.h
  *  include/wxHarbour/wxbase/wx_Bitmap.h
  *  include/wxHarbour/wxbase/wx_BitmapButton.h
  *  include/wxHarbour/wxbase/wx_BoxSizer.h
  *  include/wxHarbour/wxbase/wx_Button.h
  *  include/wxHarbour/wxbase/wx_CheckBox.h
  *  include/wxHarbour/wxbase/wx_Choice.h
  *  include/wxHarbour/wxbase/wx_Colour.h
  *  include/wxHarbour/wxbase/wx_ComboBox.h
  *  include/wxHarbour/wxbase/wx_Dialog.h
  *  include/wxHarbour/wxbase/wx_FileDialog.h
  *  include/wxHarbour/wxbase/wx_Font.h
  *  include/wxHarbour/wxbase/wx_Frame.h
  *  include/wxHarbour/wxbase/wx_Gauge.h
  *  include/wxHarbour/wxbase/wx_Grid.h
  *  include/wxHarbour/wxbase/wx_GridSizer.h
  *  include/wxHarbour/wxbase/wx_GridTableBase.h
  *  include/wxHarbour/wxbase/wx_IPV4address.h
  *  include/wxHarbour/wxbase/wx_Icon.h
  *  include/wxHarbour/wxbase/wx_ImageList.h
  *  include/wxHarbour/wxbase/wx_ListCtrl.h
  *  include/wxHarbour/wxbase/wx_ListItem.h
  *  include/wxHarbour/wxbase/wx_Listbook.h
  *  include/wxHarbour/wxbase/wx_MDIChildFrame.h
  *  include/wxHarbour/wxbase/wx_MDIParentFrame.h
  *  include/wxHarbour/wxbase/wx_Menu.h
  *  include/wxHarbour/wxbase/wx_MenuBar.h
  *  include/wxHarbour/wxbase/wx_MenuItem.h